namespace/mcp/playwright/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3d-printer
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 3d-printer
  template:
    metadata:
      labels:
        app: 3d-printer
    spec:
      containers:
        - name: 3d-printer
          image: docker.io/mcp/3d-printer:latest
          command: ["node", "dist/index.js"]
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
